--- a/NIINM/contacts.html
+++ b/NIINM/contacts.html
@@ -113,7 +113,7 @@
 				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
-				                    <li><a href="#">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
+				                    <li><a href="san.html">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="panno.html">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
@@ -283,7 +283,7 @@
 									<li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 									<li><a href="footwear.html">ОБУВНЫЕ</a></li>
-									<li><a href="#">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
+									<li><a href="san.html">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
 									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 								</ul>
 							</div>
