--- a/NIINM/san.html
+++ b/NIINM/san.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>МАТЕРИАЛЫ СОРБЦИОННО-ФИЛЬТРУЮЩИЕ | ООО “НИИИНМ”</title>
+	<title>ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -148,86 +148,125 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>МАТЕРИАЛЫ СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</h1></section>
+		<section class="page-title"><h1>МАТЕРИАЛЫ САНИТАРНО-ГИГИЕНИЧЕСКОГО НАЗНАЧЕНИЯ И ЗАЩИТЫ ЧЕЛОВЕКА</h1></section>
 		<!-- Container -->
 		<div class="container">
-			<!--! Card-block -->
-			<div class="card-block">
-				<img class="card-block__img" src="img/card6.png" alt="Научно-исследовательский институт нетканых материалов">
-				<div class="card-block__content">
-					<p>ООО "НИИНМ" разрабатывает и производит сорбционно-фильтрующие нетканые материалы для защиты окружающей среды от техногенных загрязнений. Комплекс эксплуатационных свойств таких материалов обеспечивается за счет запатентованной оригинальной волокнисто-пористой структуры, придающей материалу способность к избирательной сорбции загрязнителей.</p>
-					<p>Материалы защищены семью патентами, отмечены медалями и дипломами, в том числе и международного уровня. Они успешно прошли конкурсный отбор и были представлены на 11 Международном экономическом форуме в Санкт-Петербурге в разделе «Ресурсосбережение и рациональное природопользование». Сорбционно-фильтрующие материалы – это новое поколение технических средств, которые оптимально вписываются в современную идеологию защиты окружающей среды от техногенных загрязнений, в том числе и нефтепродуктами, так как: позволяют создать малоотходный замкнутый ресурсосберегающий технологический цикл сбора и удаления нефтяных загрязнений из окружающей среды с возвратом собранного нефтепродукта для дальнейшего использования по прямому назначению и минимизировать количество образования отходов;</p>
-				</div>
-			</div>
-			<br>
-			<br>
 			<div class="columns-section">
-				<p>Обеспечивают современный уровень сервисного экологического обслуживания объектов природопользования за счет применения превентивных средств многоразового использования (матов, салфеток, бонов), изготовленных их нетканых сорбционных материалов; реализовывают современную природоохранную концепцию «не очищать, а предотвращать» загрязнение окружающей среды. Конкурентоспособность мирового уровня наших материалов обеспечивается за счет оптимального соотношения цена/качество, сорбционной емкости по нефтепродуктам от 10 до 25 кг/кг, неограниченной плавучести, в т.ч. в нагруженном состоянии, многократности использования - не менее 10 раз, эксплуатации в широком диапазоне температур от -20С до +50С. Разработкой и производством сорбционно-фильрующих нетканых материалов занимается лаборатория полифункциональных нетканых материалов</p>
+				<p>ООО "НИИНМ" проводит исследования и разработки технологических процессов создания нетканых материалов санитарно-гигиенического, бытового и специального назначения.</p>
+				<br><br>
+				<h3>1. АТРАВМАТИЧНЫЙ МАТЕРИАЛ (НЕ ПРИЛИПАЕТ К РАНЕ).</h3>
+				<br>
+				<p>Материал используется в качестве впитывающей основы при изготовлений перевязывающих средств (салфеток, тампонов, подушечек, повязок, лейкопластырей. Полотно при высокой впитывающей способности выполняет дренажную функцию и обеспечивает не прилипание к раневой поверхности.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность, г/м2 130± 20</p>
+				<p>Ширина, см 50</p>
+				<p>Воздухопроницаемость, дм3/ м2с, не менее: 200</p>
+				<p>Поглотительная способность, г/г, не менее: 8</p>
+				<p>Скорость смачивания, с, не более: 10</p>
+				<p>Устойчивость к стерилизации (паровой и радиационный методы)</p>
+				<br>
+				<h3>2. ГИДРОФИЛЬНОЕ ПОЛОТНО « МИГ-3</h3>
+				<br>
+				<p>Полотно используется в качестве носителя лекарственных препаратов при изготовления лечебных повязок</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность, г/м2 200± 10</p>
+				<p>Ширина, см 75</p>
+				<p>Воздухопроницаемость, дм3/ м2с, не менее 300</p>
+				<p>Поглотительная способность, г/г, не менее 15</p>
+				<p>Скорость смачивания, с, не более 10</p>
+				<br>
+				<h3>3. ЛЬНОСОДЕРЖАЩИЕ НЕТКАНЫЕ МАТЕРИАЛЫ ДЛЯ ЛЕЧЕБНЫХ ИЗДЕЛИЙ, ФИЗЕОТЕРАПЕВТИЧЕСКИХ УСТРОЙСТВ</h3>
+				<br>
+				<p>Полотно состоит из комбинаций нескольких слоев а специальная металлизированная плёнка, находящаяся внутри изделия не позволяет рассеиваться собственным излучениям пациента, преобразует и отражает их, воздействуя на биологически активные точки, корректирует произошедшие сбой в организме человека.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина, см 165±4 (162±2)</p>
+				<p>Поверхностная плотность, г/м2 330±20 (420±20</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 300 (300)</p>
+				<p>по ширине 250 (250)</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 300 -----</p>
+				<p>Устойчивость к истиранию, число циклов, не менее: 3000 3000</p>
+				<br>
+				<h3>4. ВЛАГОПОГЛОЩАЮЩИЙ МАТЕРИАЛ ДЛЯ ОДЕЖДЫ СПЕЦИАЛЬНОГО НАЗНАЧЕНИЯ</h3>
+				<br>
+				<p>Нетканый материал предназначен для изготовления нательного белья со специальными свойствами. Материал обеспечивает высокую эффективность сбора продуктов потоотделения при больших физических нагрузках (отводит и поглощает до 10 г. влаги на 1г материала), оставляя сухими поверхности, контактирующие с телом человека. Кроме того, материал выдерживает многократные стирки (до 40 стирок), обладает достаточной воздухопроницаемостью.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность, г/м2 160± 10</p>
+				<p>Ширина, см 155</p>
+				<p>Сорбционная ёмкость, г/г 10/12</p>
+				<p>Воздухопроницаемость, дм3/м2 сН, не менее: 500</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 150 по ширине 200</p>
+				<p>Изделия на основе разработанного влагопоглощающего материала можно рекомендовать для: рабочих горячих цехов (стекольная промышленность, пищевая, хлебопекарная и др.); шахтеров, строителей, нефтяников, газовиков, пожарных, геологов и др.; спортсменов; материал представляет интерес для оснащения личного состава силовых структур, работающих в специальной защитной одежде (бронежилеты, изолирующие костюмы, краги для пожарных.</p>
+				<p>В институте разработан сорбционный материал с антимикробными свойствами, который может быть использован в различных учреждениях и в быту как обтирочный материал, где используются антимикробные свойства.</p>
+				<br>
+				<h3>5. АНТИМИКРОБНОЕ НЕТКАНОЕ ПОЛОТНО ДЛЯ УЛАВЛИВАНИЯ ВЗРЫВЧАТЫХ ВЕЩЕСТВ</h3>
+				<br>
+				<p>Разработанный антимикробный нетканый материал обладает эффективной адсорбцией частиц взрывчатых веществ. Материал может найти широкое применение в проборах по обнаружению взрывчатых веществ (используются в кинологии и криминалистике). Существуют зоны повышенного контроля, (аэропорты, воздушные суда, наземный и морской транспорт). где возможно обнаружение взрывчатых веществ.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность, г/м 250±25</p>
+				<p>Ширина ,мм 155</p>
+				<p>Толщина при удельной нагрузке 5 кПа, мм 3±0,3</p>
+				<p>Разрывная нагрузка, Н, не менее -в продольном направлении 80 -поперечном направлении 200</p>
+				<p>Удлинение при разрыве, %, не более</p>
+				<p>-в продольном направлении 160</p>
+				<p>-поперечном направлении 100</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее 250</p>
+				<p>Сорбционная ёмкость, г/г 17</p>
+				<p>Массовая доля антимикробного вещества,% 1,0/1,7</p>
+				<br>
+				<h3>6. НЕТКАНОЕ ПОЛОТНО ФИЛЬТРОВАЛЬНОЕ«ПФР»</h3>
+				<p>Полотно используется в составе сложных устройств, предназначенных для очистки воздуха.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина полотна, см 60 (возможны другие размеры)</p>
+				<p>Поверхностная плотность, г/м2 100±10</p>
+				<p>Толщина при удельном давлении 2 кПа, мм 2,0/2,5</p>
+				<p>Разрывная нагрузка, Н, не менее, по длине 20 по ширине 35</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 500</p>
+				<p>Эффективность очистки, % не менее: 70</p>
+				<p>Класс фильтра G-4</p>
+				<br>
+				<h3>7. НЕТКАНОЕ ПОЛОТНО ДЛЯ РЕСПИРАТОРОВ</h3>
+				<br>
+				<p>Полотно используется при изготовлении медицинских масок (респираторов).Служит внутренним слоем фильтровального элемента маски и придаёт каркасность изделию. Обладает способностью термоформования. Изделие на основе нетканого полотна «ПФР» применяются в качестве профилактического средства защиты органов дыхания от инфекций (микроорганизмов, бактерий и вирусов), передаваемых воздушно-капельным путём и может использоваться медицинским персоналом, работниками детских учреждений, предприятиями торговли, питания, населением в случаях эпидемиологической опасности. Кроме того, респиратор на основе данного нетканого полотна защищает от дыма и аллергенов( шерсть домашних животных, пыльца растений и др</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина, см 160 (возможны другие размеры)</p>
+				<p>Поверхностная плотность, г/м2 160±10</p>
+				<p>Толщина при удалённом давлении 2 кПа, мм 2,5/3,0</p>
+				<p>Воздухопроницаемость, дм3/м2 С, не менее: 800</p>
+				<br>
+				<h3>8. НЕТКАНОЕ ПОЛОТНО «ПТС»</h3>
+				<br>
+				<p>Используется для упаковки порошков и других сыпучих материалов (силикогель и др). Полотно способно скрепляться (свариваться) с помощью термосварки.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность полотна, 40-45г/м2</p>
+				<p>Полотно выпускается в рулонах длиной, 250-300 пог. м.</p>
+				<p>ширина полотна, 50-56 см.</p>
+				<p>Воздухопроницаемость, дм3/м2, не менее, 1200</p>
+				<br>
+				<h3>9. НЕТКАНОЕ ПОЛОТНО «ПТА»</h3>
+				<br>
+				<p>Полотно предназначено для армирования плёночных клеев.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Поверхностная плотность полотна, 30±2г/м2</p>
+				<p>Ширина полотна, см 55-57 см</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 1000</p>
+				<br>
+				<h3>10. НЕТКАНОЕ ПОЛОТНО «ПТФ-В»</h3>
+				<br>
+				<p>Используется для предфильтров мембранных фильтрэлементов при очистке воды.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина полотна, см 55±2</p>
+				<p>Поверхностная плотность полотна, г/м2 45±2</p>
+				<p>Толщина при удельном давлении 2кПа, мм 0,28±0,02</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 30 по ширине 25</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не более: 1800</p>
+				<p>Максимальный размер пор, мкм не более: 180</p>
 			</div>
-			<br><br>
-			<div class="columns-section">
-				<h3>1. СОРБЕНТ ДЛЯ УДАЛЕНИЯ НЕФТЯНЫХ ЗАГРЯЗНЕНИЙ С ВОДНОЙ ПОВЕРХНОСТИ "ПЕТРОЛИН"</h3>
-				<br>
-				<p>Сорбент разработан специально для удаления нефтяных загрязнений с водной поверхности. Обладает неограниченной плавучестью и селективной (избирательной) сорбцией по отношению к нефтепродуктам в присутствии воды. Устойчив к многократной механической регенерации. Число циклов «сорбция-отжим» составляет от 10 до 50 в зависимости от вязкости нефтепродукта. Способ утилизации – сжигание.</p>
-				<p>Экологичен в применении – не привносит дополнительного загрязнения в окружающую среду. Выпускается в соответствии с техническими условиями. Поставляется в рулонах шириной 160см и 80см по 40 и 20 кв.м соответственно.</p>
-				<p><strong>Характеристики материала:</strong></p>
-				<p>Ширина, см - 160 +/-3</p>
-				<p>Сорбционная емкость по нефтепродукту на единицу массы сорбента, г/г - от 15 до 25 в зависимости от вязкости нефтепродукта</p>
-				<p>Сорбционная емкость по воде на единицу массы сорбента, г/г - от 1,5 до 3,0</p>
-				<p>Толщина (при давлении 2,0 кПа), мм - 4,0 - 6,0</p>
-				<br><br>
-				<h3>2. СОРБЕНТ ДЛЯ УДАЛЕНИЯ НЕФТЯНЫХ ЗАГРЯЗНЕНИЙ С ТВЕРДОЙ ПОВЕРХНОСТИ "ПНСН"</h3>
-				<br>
-				<p>Сорбент разработан для удаления нефтяных загрязнений с поверхности грунта и любой другой твердой поверхности (бетон, асфальт и др.). Способен к многократной механической регенерации. Число циклов «сорбция-отжим» составляет от 10 до 50 в зависимости от вязкости нефтепродукта. Способ утилизации – сжигание. Экологичен в применении – не привносит дополнительного загрязнения в окружающую среду. Выпускается в соответствии с техническими условиями. Поставляется в рулонах шириной 160см и 80см по 40 и 20 кв.м соответственно.</p>
-				<p><strong>Характеристики материала:</strong></p>
-				<p>Ширина, см - 160 +/-3</p>
-				<p>Сорбционная емкость по нефтепродукту на единицу массы сорбента, г/г - от 15 до 25 в зависимости от вязкости нефтепродукта</p>
-				<p>Толщина (при давлении 2,0 кПа), мм - 4,0 - 6,0</p>
-				<p>Воздухопроницаемость, дм3/м2с 600/800</p>
-				<p>Тонкость фильтрации, мкм 120/140</p>
-				<br><br>
-				<h3>3. ПРЕВЕНТИВНО-ЗАЩИТНЫЕ ИЗДЕЛИЯ МНОГОРАЗОВОГО ИСПОЛЬЗОВАНИЯ</h3>
-				<br>
-				<p>Ассортимент превентивных средств для предотвращения хронических загрязнений промышленных территорий нефтепродуктами – салфетки, маты, боны.</p>
-				<p>Салфетки «Экочист» применяются в качестве экологически и гигиенически безопасных средств ухода и технического обслуживания оборудования и механизмов на автозаправочных станциях, транспортных предприятиях, на добывающих и перерабатывающих предприятиях нефтегазового комплекса, на судах, занимающихся транспортировкой нефтепродуктов в аэропортах, в морских и речных портах.</p>
-				<p>Обладают уникальной способностью быстро впитывать и удерживать нефтепродукты, характеризуются великолепными чистящими и адсорбирующими свойствами. Гигиенически безопасны при удалении нефтяных загрязнений с рук и других частей тела обслуживающего персонала, работающего в контакте с нефтью и ее производными.</p>
-				<p><strong>Характеристики материала:</strong></p>
-				<p>размеры 40х50см, 40х30см или по согласованию с заказчиком;</p>
-				<p>впитывает и удерживает от 0,5 до 0,8 кг нефтепродукта;</p>
-				<p>поставляется в полиэтиленовой упаковке количеством 50 шт в упаковке.</p>
-				<br>
-				<p>Маты сорбционные применяются для защиты производственных помещений от загрязнений нефтепродуктами и маслами в местах хронических протечек, для удаления нефтяной пленки с водной поверхности, для ликвидации аварийных разливов, проливов и протечек с любой поверхности.</p>
-				<br><br>
-				<h3>4. ПОЛОТНО НЕТКАНОЕ СОРБЦИОННОЕ ИЗ ХЕМОСОРБЦИОННЫХ ВОЛОКОН</h3>
-				<br>
-				<p>Может использоваться в качестве:</p>
-				<p>укрывных и фильтрующих материалов для поглощения неприятных запахов;</p>
-				<p>материалов в средствах индивидуальной защиты органов дыхания человека от кислых газов, паров и аэрозолей кислот. (HF; SO2; HCI; HNO3 и др.).</p>
-				<p>фильтровальных элементов при очистке воды и выделения растворенных веществ.</p>
-				<br>
-				<p>Материал обладает высокой скоростью ионообменных, сорбционных и каталитических процессов; Обладает малым сопротивлением фильтрующего слоя потокам жидкости и газа. Стоек к агрессивным средам.</p>
-				<p><strong>Характеристики материала:</strong></p>
-				<p>Поверхностная плотность, г/м2 150-800</p>
-				<p>Толщина, мм. 1,5-9,0</p>
-				<p>Ширина, см. 160</p>
-				<p>Оптимальная ёмкость, мг- экв/г 2-3,5</p>
-				<br><br>
-				<h3>5. ПОЛОТНО НЕТКАНОЕ СОРБЦИОННОЕ «ПЗ-В»</h3>
-				<br>
-				<p>Может использоваться: в качестве укрывных и фильтровальных материалов для поглощения неприятных запахов; для защиты от паров органических веществ: ацетонитрила, акрилонитрила, циклогексана и токсичных химикатов. Обладает высокой гигроскопичностью и сорбционной емкостью по бензолу 140-160 мг/г. Возможна корректировка свойств нетканого материала для конкретного потребителя.</p>
-				<p><strong>Характеристики материала:</strong></p>
-				<p>Поверхностная плотность, г/м2 350</p>
-				<p>Толщина, мм 3,5</p>
-				<p>Ширина, см 170</p>
-				<p>Гигроскопичность, % 3-5</p>
-			</div>
-			<br>
 			<!-- Quote block -->
 			<div class="quote-block">
-				<p>По всем вопросам, можно связаться непосредственно с кандидатом технических наук Братченя Людмилой Алексеевной, по телефонам:</p>
+				<p>По вопросам, касающимся нетканых материалов санитарно-гигиенического, бытового и специального назначения, можно связаться непосредственно с кандидатом технических наук Фокиной Ниной Александровной по телефонам:</p>
 				<p>8 (985) 300-21-37</p>
-				<p>8 (916) 850-50-04</p>
-				<p>8 (4967) 35-27-53</p>
+				<p>8 (905) 785-79-30</p>
+				<p>8 (4967) 72-88-87</p>
 			</div>
 			<!-- ./Quote block -->
 		</div>
