--- a/NIINM/asinem.html
+++ b/NIINM/asinem.html
@@ -114,7 +114,7 @@
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="san.html">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
-				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
+				                    <li><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="panno.html">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
@@ -263,7 +263,7 @@
 									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 									<li><a href="footwear.html">ОБУВНЫЕ</a></li>
 									<li><a href="san.html">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
-									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
+									<li><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
