--- a/NIINM/mbn.html
+++ b/NIINM/mbn.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ПОСЛЕДНИЕ РАЗРАБОТКИ | ООО “НИИИНМ”</title>
+	<title>ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -104,7 +104,7 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li><a href="index.html">Главная</a></li>
+				        	<li class="current-page"><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
 				            <li>
 				            	<a href="#">Материалы</a>
@@ -119,7 +119,7 @@
 				                </ul>
 				        	</li>
 				            <li><a href="asinem.html">Ассоциация</a></li>
-				            <li class="current-page"><a href="nir.html">Последние Разработки</a></li>
+				            <li><a href="nir.html">Последние Разработки</a></li>
 				            <li><a href="services.html">Услуги</a></li>
 				            <li><a href="contacts.html">Контакты</a></li>
 				            <li><a href="lab.html">Лаборатория</a></li>
@@ -148,33 +148,85 @@
 			</div>
 		</header>
 		<!--! Page-title -->
-		<section class="page-title"><h1>ПОСЛЕДНИЕ РАЗРАБОТКИ</h1></section>
+		<section class="page-title"><h1>МАТЕРИАЛЫ БЫТОВОГО НАЗНАЧЕНИЯ</h1></section>
 		<!-- Container -->
 		<div class="container">
-			<strong style="text-align: center;">Антимикробное нетканое полотно для улавливания взрывных веществ.</strong>
-			<br>
-			<br>
-			<p>Разработанный антимикробный нетканый материал обладает эффективной адсорбцией частиц взрывчатых веществ. Материал может найти широкое применение в проборах по обнаружению взрывчатых веществ (используются в кинологии и криминалистике). Существуют зоны повышенного контроля, (аэропорты, воздушные суда, наземный и морской транспорт), где возможно обнаружение взрывчатых веществ.</p>
-			<br>
-			<br>
 			<!--! Card-block -->
-			<div class="card-block right">
-				<img class="card-block__img" src="img/card5.png" alt="Научно-исследовательский институт нетканых материалов">
+			<div class="card-block">
+				<img class="card-block__img" src="img/card9.jpg" alt="Научно-исследовательский институт нетканых материалов">
 				<div class="card-block__content">
-					<strong>Характеристики</strong>
-					<ul>
-						<li>Поверхностная плотность, г/м 250±25</li>
-						<li>Ширина ,мм 155</li>
-						<li>Толщина при удельной нагрузке 5 кПа, мм 3±0,3</li>
-						<li>Разрывная нагрузка, Н, не менее -в продольном направлении 80 -поперечном направлении 200</li>
-						<li>Удлинение при разрыве, %, не более -в продольном направлении 160 -поперечном направлении 100</li>
-						<li>Воздухопроницаемость, дм3/м2 с, не менее 250</li>
-						<li>Сорбционная ёмкость, г/г 17</li>
-						<li>Массовая доля антимикробного вещества, % 1,0/1,7</li>
-					</ul>
+					<p>Разработанные нетканые материалы бытового назначения можно разделить на четыре группы:</p>
+					<p>сорбционные;</p>
+					<p>абразивные;</p>
+					<p>полирующие;</p>
+					<p>комбинированные;</p>
+					<p>Сорбционные нетканые материалы хорошо впитывают и сорбируют жидкость (поглотительная способность составляет 9-10 г/г при поверхностной плотности материала 150-160 г/м2), легко отжимаются, прочные, мягкие. Абразивные материалы абсолютно не впитывают жидкость, имеют жесткую структуру, обладают прочностью. Благодаря своей жесткой поверхности, абразивные материалы эффективны для мытья и чистки посуды, окон, зеркал. позволяют очищать гладкие поверхности даже без использования моющих средств.</p>
+					<p>Полирующие нетканые материалы имеют плотную без ворсовую структуру и рекомендуются для использования в автомобильной серии для равномерного нанесения полироли.</p>
 				</div>
 			</div>
 			<br><br>
+			<div class="columns-section">
+				<p>Такие материалы хорошо впитывают и наносят воскосодержащие жидкости, а также удаляют с поверхности и удерживают в своей структуре загрязнения. Разработанные материалы бытового назначения экологичны, нетоксичны, хорошо стираются, используется многократно.</p>
+				<br><br><br>
+				<h3>1. ИГЛОПРОБИВНОЕ ПОЛОТНО «ПВ-150»</h3>
+				<br>
+				<p>Полотно используется в качестве впитывающей салфетки. Хорошо впитывает влагу. Используется для влажной уборки помещений, а также может использоваться для мойки автомобиля.</p>
+				<p>
+					<strong>Характеристики материала:</strong>
+				</p>
+				<p>Ширина полотна, см 50</p>
+				<p>Поверхностная плотность г\м2 150±10</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине, 60 по ширине, 90</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 300</p>
+				<p>Поглотительная способность, г/г, не менее: 10</p>
+				<p>Водопоглощение, %, не менее: 500</p>
+				<br>
+				<h3>2. ХОЛСТОПРОШИВНОЕ ПОЛОТНО «ХПП-150»</h3>
+				<br>
+				<p>Полотно используется в качестве впитывающей салфетки.</p>
+				<p>
+					<strong>Характеристики материала:</strong>
+				</p>
+				<p>Ширина полотна, см 160</p>
+				<p>Поверхностная плотность г\м2 150±10</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 100</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 500</p>
+				<p>Поглотительная способность, г/г, не менее: 10</p>
+				<p>Водопоглощение, %, не менее: 400</p>
+				<br>
+				<h3>3. ИГЛОПРОБИВНОЕ ПОЛОТНО «ЛВ-300»</h3>
+				<br>
+				<p>Полотно используется в качестве полирующей салфетки (для равномерного нанесения полироля).</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина, см 165±4 (162±2)</p>
+				<p>Поверхностная плотность, г/м2 330±20 (420±20)</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 300 (300)</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 300 -----</p>
+				<p>Устойчивость к истиранию, число циклов, не менее: 3000 3000</p>
+				<br>
+				<h3>4. ИГЛОПРОБИВНОЕ ПОЛОТНО «П-300»</h3>
+				<br>
+				<p>Полотно используется в качестве абразивной чистящей салфетки.</p>
+				<p><strong>Характеристики материала:</strong></p>
+				<p>Ширина полотна, см 50</p>
+				<p>Поверхностная плотность г\м2 300±20</p>
+				<p>Разрывная нагрузка, Н, не менее: по длине 200</p>
+				<p>по ширине 300</p>
+				<p>Воздухопроницаемость, дм3/м2 с, не менее: 600</p>
+				<p>Жесткость, сН, не менее: по длине 10</p>
+				<p>по ширине 10</p>
+			</div>
+			<br>
+			<br>
+			<!-- Quote block -->
+			<div class="quote-block">
+				<p>По вопросам, касающимся нетканых материалов бытового назначения, можно связаться непосредственно с кандидатом технических наук. Фокиной Ниной по телефонам:</p>
+				<p>8 (985) 300-21-37</p>
+				<p>8 (905) 785-79-30</p>
+				<p>8 (4967) 72-88-87</p>
+				<p>8 (4967) 35-27-31</p>
+			</div>
+			<!-- ./Quote block -->
 		</div>
 		<!--! News -->
 		<section class="news">
@@ -261,7 +313,7 @@
 								<ul class="footer-menu__links">
 									<li><a href="about.html">ОБ ИНСТИТУТЕ</a></li>
 									<li><a href="asinem.html">АССОЦИАЦИЯ</a></li>
-									<li><a href="#">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
+									<li><a href="nir.html">ПОСЛЕДНИЕ  РАЗРАБОТКИ</a></li>
 									<li><a href="contacts.html">КОНТАКТЫ</a></li>
 								</ul>
 							</div>
