--- a/NIINM/san.html
+++ b/NIINM/san.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>ООО “НИИИНМ”</title>
+	<title>МАТЕРИАЛЫ САНИТАРНО-ГИГИЕНИЧЕСКОГО НАЗНАЧЕНИЯ И ЗАЩИТЫ ЧЕЛОВЕКА | ООО “НИИИНМ”</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -114,7 +114,7 @@
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="san.html">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
-				                    <li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
+				                    <li><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="panno.html">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
@@ -347,7 +347,7 @@
 									<li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 									<li><a href="footwear.html">ОБУВНЫЕ</a></li>
 									<li><a href="san.html">САНИТАРНО-ГИГИЕНИЧЕСНОГО НАЗНАЧЕНИЯ</a></li>
-									<li><a href="#">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
+									<li><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
