--- a/NIINM/filters.html
+++ b/NIINM/filters.html
@@ -104,12 +104,12 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="index.html">Главная</a></li>
+				        	<li><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
-				            <li>
+				            <li class="current-page">
 				            	<a href="#">Материалы</a>
 				            	<ul>
-				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
+				                    <li class="current-page"><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
 				                    <li><a href="eco.html">СОРБЦИОННО-ФИЛЬТРУЮЩИЕ</a></li>
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
