--- a/NIINM/mbn.html
+++ b/NIINM/mbn.html
@@ -104,9 +104,9 @@
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
 				        <ul>
-				        	<li class="current-page"><a href="index.html">Главная</a></li>
+				        	<li><a href="index.html">Главная</a></li>
 				            <li><a href="about.html">Об институте</a></li>
-				            <li>
+				            <li class="current-page">
 				            	<a href="#">Материалы</a>
 				            	<ul>
 				                    <li><a href="filters.html">ФИЛЬТРОВАЛЬНЫЕ</a></li>
@@ -114,7 +114,7 @@
 				                    <li><a href="barrier.html">БАРЬЕРНЫЕ</a></li>
 				                    <li><a href="footwear.html">ОБУВНЫЕ</a></li>
 				                    <li><a href="san.html">САНИТАРНОГО НАЗНАЧЕНИЯ</a></li>
-				                    <li><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
+				                    <li class="current-page"><a href="mbn.html">БЫТОВОГО НАЗНАЧЕНИЯ</a></li>
 				                    <li><a href="panno.html">ДЕКОРАТИВНЫЕ ПАННО</a></li>
 				                </ul>
 				        	</li>
