--- a/Paulls/index.html
+++ b/Paulls/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
-<body>
+<body class="main-page">
 	<!--! Header -->
 	<header class="fixed-header">
 		<div class="container">
@@ -40,7 +40,7 @@
 					<p> СДЕЛАЕМ ВСЮ ТЕХНИЧЕСКУЮ РАБОТУ.</p>
 				</div>
 				<!-- Case -->
-				<a href="matrice.html" class="start-banner__case">
+				<a href="sembuketov.html" class="start-banner__case">
 					Кейсы
 				</a>
 			</div>
